# MiniTorch

./: .gitignore  LICENSE  README.md  demo_graph.py  demo_training_viz.py  function.py  graph.html  main.py  mkdocs.yml  mnist_train.py  numer_diff.py  pyproject.toml  setup.py  tests.py  type_check.py  variable.py  visual_backward.py
.github/workflows/: docs.yml  release.yml  workflow.yml
MiniTorch/: __init__.py
MiniTorch/core/: __init__.py  config.py  function.py  variable.py
MiniTorch/data/: __init__.py  dataloader.py  mnist.py
MiniTorch/native/: __init__.py  _native_trainer.pyx  trainer.py
MiniTorch/nn/: __init__.py  activations.py  linear.py  module.py  sequential.py
MiniTorch/ops/: __init__.py  add.py  broadcast.py  cos.py  div.py  exp.py  log.py  matmul.py  meansquarederror.py  mul.py  neg.py  pow.py  relu.py  reshape.py  sigmoid.py  sin.py  softmax_cross_entropy.py  square.py  sub.py  sum.py  sum_to.py  tanh.py  transpose.py
MiniTorch/optim/: __init__.py  adam.py  sgd.py
MiniTorch/utils/: __init__.py  numer_diff.py  reshape_sum_backward.py  sumto.py  training_viz.py  type_check.py  visualize.py
MiniTorch/visualization/: __init__.py  architecture.py  viewer.py
MiniTorch/visualization/static/: model-viewer.css  model-viewer.js
benchmarks/: benchmark_autograd.py  benchmark_native_training.py
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.js
docs/.vitepress/theme/: custom.css
docs/api/: core.md  data.md  native.md  nn.md  ops.md  optim.md  visualization.md
docs/examples/: basic-autograd.md  mnist.md  training.md  visualization.md
docs/guide/: autograd.md  getting-started.md  neural-networks.md
docs/stylesheets/: extra.css
examples/: autograd_graph.py  basic_autograd.py  mnist.py  model_visualization.py  native_training.py
lib/graph-viewer/: package-lock.json  package.json  vite.config.ts
lib/graph-viewer/src/: main.tsx  styles.css
tests/: test.py  test_fast_autograd.py  test_model_visualization.py  test_native_training.py  test_new_ops.py
