[project]
name = "minitorchbr"
version = "0.3.0"
description = "A lightweight autograd framework for AI training, with nn layers, optimizers, structured graph visualization, and MNIST support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "BriceLucifer"}
]
keywords = ["autograd", "deep-learning", "machine-learning", "neural-networks", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pyvis>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/BriceLucifer/MiniTorch"
Documentation = "https://github.com/BriceLucifer/MiniTorch#readme"
Repository = "https://github.com/BriceLucifer/MiniTorch"
Issues = "https://github.com/BriceLucifer/MiniTorch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["MiniTorch/**", "tests/**", "*.py", "*.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["MiniTorch"]

[dependency-groups]
dev = [
    "ty>=0.0.5",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
