[project]
name = "minitorchbr"
version = "0.4.0"
description = "A fast NumPy autograd framework with neural-network layers, optimizers, and interactive model visualization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "BriceLucifer"}
]
keywords = ["autograd", "deep-learning", "machine-learning", "neural-networks", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pyvis>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/BriceLucifer/MiniTorch"
Documentation = "https://github.com/BriceLucifer/MiniTorch#readme"
Repository = "https://github.com/BriceLucifer/MiniTorch"
Issues = "https://github.com/BriceLucifer/MiniTorch/issues"

[build-system]
requires = [
    "setuptools>=77",
    "wheel",
    "Cython>=3.1",
    "numpy>=2.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["MiniTorch*"]

[tool.setuptools.package-data]
"MiniTorch.visualization" = ["static/*.js", "static/*.css"]
"MiniTorch.native" = ["*.pyx"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.19.1",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6,<10",
    "mkdocstrings[python]>=0.30,<1",
]

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = ["*-musllinux_*"]
test-command = "pytest {project}/tests -q"
test-requires = ["pytest>=7"]
